cat-stuff/cat-couchdb-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cat-couchdb
  namespace: cat-stuff
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 5984
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: cat-couchdb-certificate
