cat-stuff/cat-couchdb-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cat-couchdb
  namespace: cat-stuff
spec:
  parentRefs:
    - name: cat-couchdb
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - cat-couchdb.raft.lutris.house
  rules:
    - backendRefs:
        - name: cat-stuff-svc-couchdb
          port: 5984
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
